--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   "author": "Harmeet Singh",
   "license": "ISC",
   "dependencies": {
-    "node-static": "^0.7.11",
+    "bootstrap": "^5.0.1",
     "wscat": "^4.0.1"
   },
   "devDependencies": {},
