--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "license": "ISC",
   "dependencies": {
     "bootstrap": "^5.0.1",
+    "cogo-toast": "^4.2.3",
     "wscat": "^4.0.1"
   },
   "devDependencies": {},
